# decentra-certificates

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  recovered-editor.tsx
backend/api/: Cargo.toml
backend/api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
backend/api/src/middleware/: auth.rs  game_auth.rs  mod.rs
backend/api/src/routes/: admin.rs  admin_game.rs  game.rs  mod.rs  multipart.rs  public.rs  system.rs
backend/api/src/services/: audit.rs  auth.rs  categories.rs  certificate_issues.rs  certificate_jobs.rs  certificates.rs  font_loader.rs  fonts.rs  game_auth.rs  game_leaderboard.rs  game_telegram.rs  mod.rs  normalization.rs  participants.rs  pdf_renderer.rs  redis.rs  scene_renderer.rs  settings.rs  storage.rs  svg_generator.rs  svg_renderer.rs  telegram.rs  templates.rs  urls.rs
backend/db-migration/: Cargo.toml
backend/db-migration/src/: lib.rs
backend/db-migration/src/migrations/: m20260415_000001_create_initial_schema.rs  m20260415_000002_convert_timestamps_to_timestamptz.rs  m20260416_000003_add_ops_hardening.rs  m20260416_000004_add_layout_box_geometry.rs  m20260417_000005_add_template_roster_indexes.rs  m20260417_000006_add_template_canvas_data.rs  m20260420_000007_add_categories_and_template_category.rs  m20260420_000008_fix_categories_to_be_template_scoped.rs  m20260421_000009_add_certificate_issue_status.rs  m20260422_000010_add_issue_template_version.rs  m20260515_000011_create_game_tables.rs  mod.rs
backend/entity/: Cargo.toml
backend/entity/src/: admin_audit_logs.rs  admins.rs  app_settings.rs  certificate_issues.rs  certificate_templates.rs  game_scores.rs  game_sessions.rs  game_users.rs  leaderboard_settings.rs  lib.rs  participants.rs  prelude.rs  refresh_sessions.rs  template_categories.rs  template_layouts.rs
docs/: README.md  TODO.md  TechTask.md  api.md  architecture.md  development.md  performance.md  roadmap.md  template-renderer-migration.md  ТЗ_ генерация сертификатов(1).md
frontend/: biome.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(miniapp)/: layout.tsx  page.tsx
frontend/app/(miniapp)/game/: page.tsx
frontend/app/(miniapp)/game/leaderboard/: page.tsx
frontend/app/(miniapp)/game/profile/: page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/game/: page.tsx
frontend/app/admin/issuance/: page.tsx
frontend/app/admin/participants/: page.tsx
frontend/app/admin/templates/: page.tsx
frontend/app/admin/templates/[id]/: page.tsx
frontend/app/admin/templates/[id]/categories/: page.tsx
frontend/app/admin/templates/[id]/layout/: page.tsx
frontend/app/admin/templates/[id]/participants/: page.tsx
frontend/components/: admin-back-link.tsx  admin-login-form.tsx  admin-page-header.tsx  admin-panel.tsx  admin-shell.tsx  certificate-download-button.tsx  channel-subscription-block.tsx  email-request-form.tsx  file-input-field.tsx  glow-card.tsx  grid-background.tsx  info-tile.tsx  issuance-toggle-card.tsx  participants-import-form.tsx  providers.tsx  public-mobile-nav.tsx  telegram-provider.tsx  telegram-subscription-modal.tsx  template-asset-preview.tsx  template-card.tsx  template-category-manager.tsx  template-current-preview.tsx  template-layout-editor.tsx  template-stat-link-card.tsx  template-upload-form.tsx
frontend/components/game/: GameAuthGate.tsx  GamePageClient.tsx  LeaderboardPageClient.tsx  ProfilePageClient.tsx  Tetris.tsx
frontend/components/ui/: skeleton.tsx
frontend/config/: fonts.ts
frontend/hooks/: use-auth.tsx  use-telegram-login.ts
frontend/lib/: admin-api.ts  api.ts  game-api.ts  template-canvas.ts  template-layout.ts  template-scene-renderer.ts  utils.ts
frontend/types/: telegram.d.ts
stress-tests/: README.md  REPORT.md
stress-tests/fixtures/: participants-1000.csv  participants-10000.csv  participants-5000.csv
stress-tests/k6/: admin-import.js  admin-preview.js  common.js  mixed-realistic.js  public-queued-certificates.js  public-ready-certificates.js  public-smoke.js
stress-tests/rs/: Cargo.toml
stress-tests/rs/src/: bench.rs  conn_leak.rs  dedup_bench.rs  import_bench.rs  main.rs  render_bench.rs  reset_generated.rs
stress-tests/scripts/: clear-generated.sh  generate-fixtures.sh  monitor-resources.sh  seed-http-data.sh
