[package]
name = "decentra-certificates-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "decentra-certificates-api"

[[bin]]
name = "seed-admin"
path = "src/bin/seed_admin.rs"

[dependencies]
resvg = "0.47"
usvg = { version = "0.47", features = ["text", "fontdb"] }
tiny-skia = "0.12"
fontdb = "0.23"
reqwest.workspace = true
regex.workspace = true
printpdf.workspace = true
rusttype.workspace = true
actix-cors.workspace = true
actix-files.workspace = true
actix-governor.workspace = true
actix-multipart.workspace = true
actix-web.workspace = true
anyhow.workspace = true
argon2.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
calamine.workspace = true
chrono.workspace = true
dotenvy.workspace = true
entity = { package = "decentra-certificates-entity", path = "../entity" }
db-migration = { package = "decentra-certificates-db-migration", path = "../db-migration" }
csv.workspace = true
flate2.workspace = true
futures-util.workspace = true
image.workspace = true
jsonwebtoken.workspace = true
num_cpus.workspace = true
redis.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
uuid.workspace = true
validator.workspace = true
